# astra-logger-rs

./: Cargo.toml  README.md  alog.sh
json/: daemon.json
log/: a.json  daemon.json
src/: analyser.rs  formatter.rs  lib.rs  scanner.rs  test.rs  vizualizer.rs
